# mobarust

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.dev  LICENSE  MobaRust_Hermes_Build_Plan_and_Prompt.md  README.md  docker-compose.dev.yml  docker-compose.test.yml
.github/workflows/: ci.yml
crates/moba-core/: Cargo.toml
crates/moba-core/src/: config.rs  lib.rs  session.rs
crates/moba-core/tests/: config_test.rs  session_test.rs
crates/moba-editor/: Cargo.toml
crates/moba-editor/src/: editor.rs  lib.rs
crates/moba-editor/tests/: editor_test.rs
crates/moba-gui/: Cargo.toml
crates/moba-gui/src/: app.rs  lib.rs  main.rs  session_dialog.rs  sidebar.rs  tabs.rs  term_view.rs
crates/moba-macros/: Cargo.toml
crates/moba-macros/src/: lib.rs
crates/moba-net/: Cargo.toml
crates/moba-net/src/: lib.rs  ping.rs  port_scan.rs
crates/moba-net/tests/: net_test.rs
crates/moba-rdp/: Cargo.toml
crates/moba-rdp/src/: config.rs  lib.rs
crates/moba-serial/: Cargo.toml
crates/moba-serial/src/: config.rs  lib.rs
crates/moba-serial/tests/: serial_test.rs
crates/moba-sftp/: Cargo.toml
crates/moba-sftp/src/: fs.rs  lib.rs
crates/moba-ssh/: Cargo.toml
crates/moba-ssh/src/: client.rs  error.rs  known_hosts.rs  lib.rs  tunnels.rs
crates/moba-ssh/tests/: ssh_test.rs
crates/moba-telnet/: Cargo.toml
crates/moba-telnet/src/: lib.rs  protocol.rs
crates/moba-term/: Cargo.toml
crates/moba-term/src/: grid.rs  lib.rs  pty.rs  scrollback.rs  selection.rs  vt_parser.rs
crates/moba-term/tests/: integration.rs  pty_test.rs  scrollback_test.rs  selection_test.rs
crates/moba-vault/: Cargo.toml
crates/moba-vault/src/: lib.rs  vault.rs
crates/moba-vnc/: Cargo.toml
crates/moba-vnc/src/: config.rs  lib.rs
crates/moba-x11/: Cargo.toml
crates/moba-x11/src/: config.rs  lib.rs
docs/: LICENSES.md  PARITY.md  TASKS.md
docs/adr/: 0001-technology-stack.md  README.md
scripts/: check
