[package]
name = "moba-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
moba-core = { workspace = true }
russh = "0.62.4"
russh-sftp = "2.3.0"
russh-keys = "0.49.2"
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
e2e = []
