[package]
name = "moba-term"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
e2e = []

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
moba-core = { workspace = true }
vte = "0.15.0"
portable-pty = "0.9.0"

[dev-dependencies]
insta = "1.48.0"
proptest = "1.11.0"
serde_json = { workspace = true }
