[package]
name = "moba-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
moba-core = { workspace = true }
argon2 = "0.5.3"
aes-gcm = "0.11.0"
zeroize.workspace = true
serde_json.workspace = true
rand = "0.10.2"

[dev-dependencies]
rand = "0.10.2"
