[package]
name = "moba-x11"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
moba-core = { workspace = true }
moba-ssh = { workspace = true }
serde_json.workspace = true
